--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.41.0",
+    "@tanstack/react-query-devtools": "^4.41.0",
     "axios": "^1.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
